update tooltip to  uib-tooltip

--- a/app/scripts/views/biz/subject/update.html
+++ b/app/scripts/views/biz/subject/update.html
@@ -143,12 +143,12 @@
                                                             <li>标题：
                                                                 <span ng-bind="item.title |characters:12:true"
                                                                       tooltip-placement="bottom"
-                                                                      tooltip="{{item.title}}"></span>
+                                                                      uib-tooltip="{{item.title}}"></span>
                                                             </li>
                                                             <li>简介：
                                                                 <span ng-bind="item.brief|characters: 12:true"
                                                                       tooltip-placement="bottom"
-                                                                      tooltip="{{item.brief}}"></span>
+                                                                      uib-tooltip="{{item.brief}}"></span>
                                                             </li>
                                                             <li>已售：<span ng-bind="item.order.order_copies"></span></li>
                                                             <li>状态：
@@ -196,12 +196,12 @@
                                                         <li>标题：
                                                                 <span ng-bind="item.title |characters:12:true"
                                                                       tooltip-placement="bottom"
-                                                                      tooltip="{{item.title}}"></span>
+                                                                      uib-tooltip="{{item.title}}"></span>
                                                         </li>
                                                         <li>简介：
                                                                 <span ng-bind="item.brief|characters: 12:true"
                                                                       tooltip-placement="bottom"
-                                                                      tooltip="{{item.brief}}"></span>
+                                                                      uib-tooltip="{{item.brief}}"></span>
                                                         </li>
                                                         <li>已售：<span ng-bind="item.order.order_copies"></span></li>
                                                         <li>状态：<span ng-bind="item.status|product_status"></span>
