--- a/app/scripts/views/biz/subject_group/update.html
+++ b/app/scripts/views/biz/subject_group/update.html
@@ -96,12 +96,12 @@
                                                         <li>名称：
                                                             <span ng-bind="item.name |characters:12:true"
                                                                   tooltip-placement="bottom"
-                                                                  tooltip="{{item.name}}"></span>
+                                                                  uib-tooltip="{{item.name}}"></span>
                                                         </li>
                                                         <li>简介：
                                                             <span ng-bind="item.brief|characters: 12:true"
                                                                   tooltip-placement="bottom"
-                                                                  tooltip="{{item.brief}}"></span>
+                                                                  uib-tooltip="{{item.brief}}"></span>
                                                         </li>
                                                     </ul>
                                                 </div>
