--- a/app/scripts/views/biz/product_act/update.html
+++ b/app/scripts/views/biz/product_act/update.html
@@ -87,7 +87,7 @@
                         <div form-textarea text="玩法说明内容" ng-model="param.play_introduction"
                              placeholder="玩法说明内容" required="true"></div>
                         <div form-table text="活动类目" ng-model="param.options" required="true" max="1"
-                             columns="[{'name': 'ID', 'field': 'option_id',disabled:'true'},
+                             columns="[{'name': 'ID', 'field': 'option_id',hide:'true'},
                              {'name': '类目', 'field': 'option_name'},
                              {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2'},
                              {'name': '库存', 'field': 'option_inventory'}]"></div>
