--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -3107,7 +3107,8 @@ textarea.form-group-lg .form-control, select[multiple].form-group-lg .form-contr
 }
 
 .has-error .form-control {
-    border-color: #fff;
+    /*border-color: #fff;*/
+    border-color: #e80c0c;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075)
 }
 
@@ -5691,7 +5692,7 @@ a.list-group-item-danger.active, a.list-group-item-danger.active:hover, a.list-g
     /*background-color: #fff;*/
     background-color: #f5f5f5;
     border-color: #ddd;
-    background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
+    background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
 }
 
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
@@ -10178,6 +10179,18 @@ html, body {
     background-color: pink;
 }
 
+[name=FormBody] .form-group input.ng-dirty.ng-invalid-required {
+    border-color: pink;
+}
+
+[name=FormBody] .form-group input[disabled].ng-invalid-required {
+    background-color: pink;
+}
+
+[name=FormBody] td > textarea.ng-invalid-required {
+    background-color: pink;
+}
+
 /*  form 表单验证 end  */
 
 /* hjm-grid search mobile start */
@@ -10229,6 +10242,7 @@ html, body {
     [ui-view] {
         overflow: scroll;
     }
+
     .navbar-collapse.collapse {
         display: block !important;
         height: auto !important;
