--- a/app/scripts/views/biz/survey_plan/update.html
+++ b/app/scripts/views/biz/survey_plan/update.html
@@ -1,21 +1,21 @@
 <div class="dashboard-page ">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title inlineBlock" ng-if="!$stateParams.id">新增题库</h3>
-            <h3 class="panel-title inlineBlock" show-role="'admin,op'" ng-if="$stateParams.id">修改题库</h3>
-            <h3 class="panel-title inlineBlock" show-role="'!admin,op'" ng-if="$stateParams.id">题库详情</h3>
+            <h3 class="panel-title inlineBlock" ng-if="!$stateParams.id">新增测评</h3>
+            <h3 class="panel-title inlineBlock" show-role="'admin,op'" ng-if="$stateParams.id">修改测评</h3>
+            <h3 class="panel-title inlineBlock" show-role="'!admin,op'" ng-if="$stateParams.id">测评详情</h3>
         </div>
         <div class="panel-body">
             <!--<simditor ng-model="content" config="simditorConfig"></simditor>-->
             <form class="form-horizontal" name="FormBody" novalidate>
                 <div class="panel panel-primary">
                     <div class="panel-body">
-                        <div form-input text="测评名称" ng-model="param.name" placeholder="名称"></div>
+                        <div form-input text="测评名称" ng-model="param.name" placeholder="名称" required="true"></div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">对应商品号
                                 <span class="form_label_dangus">*</span></label>
                             <div class="col-sm-2">
-                                <input class="form-control" ng-model="param.product_id" required>
+                                <input class="form-control" ng-model="param.product_id" required="true">
                             </div>
                             <div class="col-sm-1">
                                 <a class="btn btn-primary btn-rounded" ng-click="search_product_id()">查询</a>
@@ -26,14 +26,13 @@
                             </div>
                         </div>
 
-                        <div form-image text="广告位" ng-model="param.banner" max="100"></div>
+                        <div form-image text="广告位" ng-model="banner" max="100"></div>
 
-                        <div form-textarea="" text="文字描述" ng-model="param.brief" placeholder="文字描述"></div>
+                        <div form-textarea="" text="文字描述" ng-model="param.brief" placeholder="文字描述" required="true"></div>
 
                         <div form-table text="附加信息" ng-model="param.attachments"
-                             columns="[{'name': 'ID', 'field': 'pivot.question_id',required:'true'},
-                             {'name': '搜索', type:'search',search_api:'/surveys/questions/((pivot.question_id))?category_type=1&count=1000&page=1&',search_field:'pivot.question_id',result_field:'title'},
-                             {'name': '题目', 'field': 'title',readonly:'true'},
+                             columns="[
+                             {'name': '文字描述', 'field': 'pivot.question_id',required:'true',select:'true',source:'survey_question_list_attachments'},
                              {'name': '排序', 'field': 'pivot.order_by',required:'true'}]"></div>
 
                         <div form-radio text="年龄" type="radio" ng-model="age" required="true" default="1"
@@ -41,7 +40,7 @@
                              source-api=""></div>
 
                         <div form-table text="涉及维度" ng-model="param.categories" required="true"
-                             columns="[{'name': '设置维度', 'field': 'pivot.category_id',required:'true',select:'true',source:'survey_question_category_list2'},
+                             columns="[{'name': '设置维度', 'field': 'pivot.category_id',required:'true',select:'true',source:'survey_question_category_list_general'},
                              {'name': '数量', 'field': 'pivot.count',required:'true'}]"></div>
 
                         <div class="form-group">
@@ -51,8 +50,8 @@
                                 <table class="table table-bordered table-striped">
                                     <thead>
                                     <tr>
-                                        <th class="text-center">最小年龄<br/>最大年龄</th>
-                                        <th class="text-center">建议<br/>内容</th>
+                                        <th class="text-center">得分区间</th>
+                                        <th class="text-center">建议内容</th>
                                     </tr>
                                     </thead>
                                     <tbody>
