--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -52,7 +52,7 @@
                              minlength="1" maxlength="30"></div>
                         <div form-radio text="SKU" type="radio" ng-model="param.sku" required="true" default="1"
                              source="[{text:'活动',value:'1'},{text:'测评',value:'2'},{text:'众筹',value:'3'},{text:'年卡',value:'4'},
-                             {text:'会员',value:'5'},{text:'测试',value:'6'},{text:'其他',value:'7'}]"
+                             {text:'会员',value:'5'},{text:'测试',value:'6'},{text:'其他',value:'7'},{text:'霸王团',value:'8'}]"
                              source-api=""></div>
                         <div form-radio text="活动类别" ng-model="param.act_type" required="true" default=""
                              source="[{text:'游学',value:'游学'},{text:'DIY',value:'DIY'},{text:'外语',value:'外语'},
