测评内容提交

--- a/app/scripts/views/biz/survey_list/update.html
+++ b/app/scripts/views/biz/survey_list/update.html
@@ -84,13 +84,10 @@
                                     </tbody>
                                 </table>
                             </div>
+                            <a class="btn btn-success btn-rounded pull-right" ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
                         </div>
-
-
                     </div>
                 </div>
-                <div form-error-block></div>
-                <a class="btn btn-success btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
             </form>
         </div>
     </div>
