--- a/app/scripts/views/biz/survey_question/update.html
+++ b/app/scripts/views/biz/survey_question/update.html
@@ -21,7 +21,7 @@
                         <div form-table text="选项" ng-model="param.options" required="true"
                              columns="[{'name': 'ID', 'field': 'id',hide:'true'},
                              {'name': '名称', 'field': 'name',required:'true'},
-                             {'name': '正确选项(之一)', 'field': 'selected',required:'true',radioBox:'true',default:'0',source:'[{text:\'是\',value:\'1\'},{text:\'否\',value:\'0\'}]'}]"></div>
+                             {'name': '正确选项', 'field': 'selected',required:'true',radioBox:'true',default:'0',source:'[{text:\'是\',value:\'1\'},{text:\'否\',value:\'0\'}]'}]"></div>
 
                         <div form-radio text="年龄" type="radio" ng-model="age" required="true" default="1"
                              source="[{text:'0-3',value:'1'},{text:'4-6',value:'2'},{text:'7-9',value:'3'},{text:'10岁以上',value:'4'}]"
