--- a/app/scripts/views/biz/survey_question/update.html
+++ b/app/scripts/views/biz/survey_question/update.html
@@ -11,21 +11,35 @@
                   disabled-role="{{$stateParams.product_id?'admin,op':''}}">
                 <div class="panel panel-primary">
                     <div class="panel-body">
+                        <div form-radio text="选项带分数的单选题" type="radio" ng-model="param.need_score" required="true"
+                             default="0" source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
+
                         <div form-radio text="题型" type="radio" ng-model="param.type" required="true" default="3"
+                             ng-show="param.need_score==2"
                              source="[{text:'单选',value:'3'},{text:'多选',value:'2'}]" source-api=""></div>
+
                         <div form-select text="维度" ng-model="param.category_id" required="true"
                              source="$root.survey_question_category_list_general" source-api=""></div>
                         <div form-textarea text="文字描述" ng-model="param.title" placeholder="文字描述"
                              ng-disabled="$stateParams.product_id" required="true"></div>
                         <div form-image text="题图" ng-model="image" max="1" hide-bar="[1,1,1,1]"></div>
-                        <div form-table text="选项" ng-model="param.options" required="true"
+                        <div form-table text="选项" ng-model="param.options" ng-if="param.need_score==2"
                              columns="[{'name': 'ID', 'field': 'id',hide:'true'},
                              {'name': '名称', 'field': 'name',required:'true'},
                              {'name': '正确选项', 'field': 'selected',required:'true',radioBox:'true',default:'0',source:'[{text:\'是\',value:\'1\'},{text:\'否\',value:\'0\'}]'}]"></div>
 
-                        <div form-radio text="年龄" type="radio" ng-model="age" required="true" default="1"
-                             source="[{text:'0-3',value:'1'},{text:'4-6',value:'2'},{text:'7-9',value:'3'},{text:'10岁以上',value:'4'}]"
-                             source-api=""></div>
+                        <div form-table text="选项" ng-model="param.options" ng-if="param.need_score==1"
+                             columns="[{'name': 'ID', 'field': 'id',hide:'true'},
+                             {'name': '名称', 'field': 'name',required:'true'},
+                             {'name': '该选项得分', 'field': 'score',required:'true',type:'number'}]"></div>
+
+                        <!--<div form-radio text="年龄" type="radio" ng-model="age" required="true" default="1"-->
+                             <!--source="[{text:'0-3',value:'1'},{text:'4-6',value:'2'},{text:'7-9',value:'3'},{text:'10岁以上',value:'4'}]"-->
+                             <!--source-api=""></div>-->
+
+                        <div form-input text="最小年龄" ng-model="param.age_min" placeholder="最小年龄" required="true"></div>
+                        <div form-input text="最大年龄" ng-model="param.age_max" placeholder="最大年龄" required="true"></div>
+
                     </div>
                 </div>
                 <div form-error-block></div>
